package com.traveller.planner.model;

public class UserModel {
}
